--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
                 <artifactId>spotbugs-maven-plugin</artifactId>
                 <version>4.5.3.1</version>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.9.0</version>
+            </plugin>
         </plugins>
     </reporting>
 </project>
