Added Maven-site-plugin and the distribution Management element

--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,18 @@
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.11.0</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.11.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.wagon</groupId>
+                        <artifactId>wagon-ssh</artifactId>
+                        <version>3.5.1</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
     <reporting>
@@ -133,4 +145,10 @@
             </plugin>
         </plugins>
     </reporting>
+    <distributionManagement>
+        <site>
+            <id>shrek</id>
+            <url>scp://nobleknight@shrek.unideb.hu:2222/home/nobleknight/public_html/${project.artifactId}</url>
+        </site>
+    </distributionManagement>
 </project>
